--- a/backend/biome.json
+++ b/backend/biome.json
@@ -1,8 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.5.0/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
+  "$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
   "linter": {
     "enabled": true,
     "rules": {
@@ -13,7 +10,7 @@
     "enabled": true,
     "formatWithErrors": false,
     "indentStyle": "space",
-    "indentSize": 2,
+    "indentWidth": 2,
     "lineWidth": 100,
     "lineEnding": "lf"
   },
@@ -24,7 +21,7 @@
       "bracketSameLine": false,
       "quoteProperties": "asNeeded",
       "semicolons": "always",
-      "trailingComma": "all"
+      "trailingCommas": "all"
     }
   }
 }
