--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.67.0",
     "react-router-dom": "^7.10.0",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.17",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
